# FieldImage

./: .gitignore  LICENSE  README.md  codemeta.json  pyproject.toml  requirements.txt  setup.bat  setup.sh
example_images/: Black Rock Mountain.yaml  Bob Bald.yaml  The Hangover.yaml  The Pinnacle.yaml
src/FieldImage/apps/: createDirectorySites.py  iProLocator.py
src/FieldImage/utils/: constants.py  generalHelpers.py  imageHelpers.py
